fix(remove-images): remove images from pagesensure that the pages are still responsiveensure that each role align[Delivers #165471315]

--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,7 @@
   background-size:cover;
   height: 100vh;
   display: flex;
+  font-family: Agency FB;
 }
 
 .descriptions{
