--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a:hover {
   }
 
 body {
-font-family: 'Josefin Sans', sans-serif;
+  font-family: Agency FB;
 }
 
 nav{
